Update date picker label and translation keys to use 'open until' consistently

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -25,12 +25,12 @@ location=Ort
 mailing.created=Versand erstellt
 mailing=Versand
 open.from=Offen von
-open.to=Offen bis
+open.until=Offen bis
 participates=nimmt teil
 persons=Jugeler
 registration.for=Anmeldung für
 registration.form=Anmeldeformular
-registrations=Anmeldungen
+registrations=Einladungen
 remarks=Bemerkungen
 reset=Reset
 save.error=Fehler beim Aktualisieren der Daten. Überprüfen Sie, ob alle Werte gültig sind
