Add email text support for registration, improve translations, and enhance UI functionality

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -3,6 +3,9 @@ application.title=Anmeldetool
 back=Zurück
 cancel=Abbrechen
 create.mailing=Versand erstellen
+create.mailing.confirm=Möchtest du den Versand für die Registrierung erstellen?
+create.mailing.success=Der Versand wurde erstellt
+create.mailing.error=Es gibt bereits einen Versand
 date.of.birth=Geburtsdatum
 delete.event.error=Der Anlass wird noch verwendet und kann nicht gelöscht werden
 delete.event.question=Willst du den Anlass wirklich löschen?
@@ -14,6 +17,8 @@ delete.person.success=Die Person wurde gelöscht
 delete.person=Person löschen
 description=Beschreibung
 email=Email
+email.text=Email Text (%s nicht vergessen)
+email.text.placeholder=E-Mail-Text eingeben. Für den Link zum Registrierungsformular muss %s enthalten sein.
 emails.sent=Emails verschickt
 event.registrations=Anmeldungen
 events=Anlässe
@@ -31,7 +36,10 @@ persons=Jugeler
 registration.for=Anmeldung für
 registration.form=Anmeldeformular
 registrations=Einladungen
+register=Anmelden
+registration.success=Vielen Dank für die Anmeldung!
 remarks=Bemerkungen
+remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
 reset=Reset
 save.error=Fehler beim Aktualisieren der Daten. Überprüfen Sie, ob alle Werte gültig sind
 save.success=Die Daten wurden gespeichert
