Refactor views to use generic EditView and improve i18n support

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -1,25 +1,22 @@
+
 active=Aktiv
 application.title=Anmeldetool
 back=Zurück
 cancel=Abbrechen
-create.mailing=Versand erstellen
 create.mailing.confirm=Möchtest du den Versand für die Registrierung erstellen?
-create.mailing.success=Der Versand wurde erstellt
 create.mailing.error=Es gibt bereits einen Versand
+create.mailing.success=Der Versand wurde erstellt
+create.mailing=Versand erstellen
 date.of.birth=Geburtsdatum
-delete.event.error=Der Anlass wird noch verwendet und kann nicht gelöscht werden
-delete.event.question=Willst du den Anlass wirklich löschen?
-delete.event.success=Der Anlass wurde gelöscht
-delete.event=Anlass löschen
-delete.person.error=Die Person wird noch verwendet und kann nicht gelöscht werden
-delete.person.question=Willst du die Person wirklich löschen?
-delete.person.success=Die Person wurde gelöscht
-delete.person=Person löschen
+delete.record.error=Der Datensatz wird noch verwendet und kann nicht gelöscht werden
+delete.record.question=Willst du den Datensatz wirklich löschen?
+delete.record.success=Der Datensatz wurde gelöscht
+delete.record=Datensatz löschen
 description=Beschreibung
-email=Email
-email.text=Email Text (%s nicht vergessen)
 email.text.placeholder=E-Mail-Text eingeben. Für den Link zum Registrierungsformular muss %s enthalten sein.
-emails.sent=Emails verschickt
+email.text=E-Mail Text (%s nicht vergessen)
+email=E-Mail
+emails.sent=E-Mails verschickt
 event.registrations=Anmeldungen
 events=Anlässe
 first.name=Vorname
@@ -33,13 +30,13 @@ open.from=Offen von
 open.until=Offen bis
 participates=nimmt teil
 persons=Jugeler
+register=Anmelden
 registration.for=Anmeldung für
 registration.form=Anmeldeformular
-registrations=Einladungen
-register=Anmelden
 registration.success=Vielen Dank für die Anmeldung!
-remarks=Bemerkungen
+registrations=Einladungen
 remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
+remarks=Bemerkungen
 reset=Reset
 save.error=Fehler beim Aktualisieren der Daten. Überprüfen Sie, ob alle Werte gültig sind
 save.success=Die Daten wurden gespeichert
@@ -48,8 +45,12 @@ select.all.events=Alle Anlässe auswählen
 select.all.persons=Alle Personen auswählen
 select.no.events=Keine Anlässe auswählen
 select.no.persons=Keine Personen auswählen
-send.emails=Emails verschicken
+send.emails=E-Mails verschicken
+send.emails.confirm=Möchtest du die E-Mails versenden?
+send.emails.error=Die E-Mails wurden bereits versendet
+send.emails.success=Die E-Mails wurden versendet
 sent=Versendet
+show.registrations=Anmeldungen anzeigen
 title=Bezeichnung
 until=bis
 year=Jahr
