Fix German and English translations for save notifications and improve binding consistency

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -1,4 +1,3 @@
-
 active=Aktiv
 application.title=Anmeldetool
 back=Zurück
@@ -38,8 +37,8 @@ registrations=Einladungen
 remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
 remarks=Bemerkungen
 reset=Reset
-save.error=Fehler beim Aktualisieren der Daten. Überprüfen Sie, ob alle Werte gültig sind
-save.success=Die Daten wurden gespeichert
+save.error=Der Datensatz konnte nicht gespeichert werden
+save.success=Der Datensatz wurden gespeichert
 save=Speichern
 select.all.events=Alle Anlässe auswählen
 select.all.persons=Alle Personen auswählen
