Add registration success translations and update button style after successful registration

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -30,6 +30,7 @@ open.until=Offen bis
 participates=nimmt teil
 persons=Jugeler
 register=Anmelden
+registration=Anmeldung
 registration.for=Anmeldung für
 registration.form=Anmeldeformular
 registration.success=Vielen Dank für die Anmeldung!
