#9 Update registration flow to support edit functionality and improve UI consistency

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -34,6 +34,7 @@ registration=Anmeldung
 registration.for=Anmeldung für
 registration.form=Anmeldeformular
 registration.success=Vielen Dank für die Anmeldung!
+registration.updated=Die Anmeldung wurde aktualisiert
 registrations=Einladungen
 remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
 remarks=Bemerkungen
@@ -53,5 +54,6 @@ sent=Versendet
 show.registrations=Anmeldungen anzeigen
 title=Bezeichnung
 until=bis
+update.registration=Anmeldung aktualisieren
 year=Jahr
 yes=Ja
