#8 Add footer totals to grid and implement registration count per event
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -53,6 +53,7 @@ send.emails.success=Die E-Mails wurden versendet
 sent=Versendet
 show.registrations=Anmeldungen anzeigen
 title=Bezeichnung
+total=Total
 until=bis
 update.registration=Anmeldung aktualisieren
 year=Jahr
