Update UI for invitations, adjust layout, and improve translations
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -35,7 +35,9 @@ registration.for=Anmeldung für
 registration.form=Anmeldeformular
 registration.success=Vielen Dank für die Anmeldung!
 registration.updated=Die Anmeldung wurde aktualisiert
-registrations=Einladungen
+registrations=Anmeldungen
+invitations=Einladungen
+invitation=Einladung
 remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
 remarks=Bemerkungen
 reset=Reset
