#11 Refactor UI components and improve role-based access control.
Replaced `Button` with a custom `Icon` component for better consistency across UI elements. Updated access roles from `ADMIN` to `USER` for multiple views to align with revised security policies. Improved email generation logic and addressed existing database queries with optimizations.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -25,6 +25,7 @@ link=Link
 location=Ort
 mailing.created=Versand erstellt
 mailing=Versand
+no.registrations=Keine Anmeldungen
 open.from=Offen von
 open.until=Offen bis
 participates=nimmt teil
@@ -57,6 +58,7 @@ show.registrations=Anmeldungen anzeigen
 title=Bezeichnung
 total=Total
 until=bis
+update.mailing=Versand aktualisieren
 update.registration=Anmeldung aktualisieren
 year=Jahr
 yes=Ja
