--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -25,7 +25,8 @@ link=Link
 location=Ort
 mailing.created=Versand erstellt
 mailing=Versand
-no.registrations=Keine Anmeldungen
+no.mailings=Keinen Versand gefunden
+no.registrations=Keine Anmeldungen gefunden
 open.from=Offen von
 open.until=Offen bis
 participates=nimmt teil
@@ -33,7 +34,7 @@ persons=Jugeler
 register=Anmelden
 registration=Anmeldung
 registration.for=Anmeldung für
-registration.form=Anmeldeformular
+registration.form=Anmeldeformular anzeigen
 registration.success=Vielen Dank für die Anmeldung!
 registration.updated=Die Anmeldung wurde aktualisiert
 registrations=Anmeldungen
