Refactor email sending logic and enhance UI translations.
Replaced synchronous email sending with asynchronous logic using `@Async` for better performance. Refactored the email-sending functionality into `EmailSender`, adding necessary validation and error handling. Updated i18n translations and UI components to improve clarity and user experience.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -52,10 +52,10 @@ select.no.events=Keine Anlässe auswählen
 select.no.persons=Keine Personen auswählen
 send.emails=E-Mails verschicken
 send.emails.confirm=Möchtest du die E-Mails versenden?
-send.emails.error=Die E-Mails wurden bereits versendet
-send.emails.success=Die E-Mails wurden versendet
+send.emails.success=Die E-Mails werden nun versendet
 sent=Versendet
 show.registrations=Anmeldungen anzeigen
+show.mailings=Versand anzeigen
 title=Bezeichnung
 total=Total
 until=bis
