Add tracking for registration email timestamp
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -32,6 +32,7 @@ open.until=Offen bis
 participates=nimmt teil
 persons=Jugeler
 register=Anmelden
+registered.at=Angemeldet am
 registration=Anmeldung
 registration.for=Anmeldung für
 registration.form=Anmeldeformular anzeigen
