Add Excel export functionality for event registrations
Introduced the ability to export event registration data to an Excel file. Integrated a new service using Apache POI for generating the Excel sheets and updated the UI to include an export button. Added necessary translations and dependencies to support this feature.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -18,6 +18,7 @@ email=E-Mail
 emails.sent=E-Mails verschickt
 event.registrations=Anmeldungen
 events=Anlässe
+export=Export
 first.name=Vorname
 from=von
 last.name=Nachname
