--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -37,8 +37,8 @@ registered.at=Angemeldet am
 registration=Anmeldung
 registration.for=Anmeldung für
 registration.form=Anmeldeformular anzeigen
-registration.success=Vielen Dank für die Anmeldung!
-registration.updated=Die Anmeldung wurde aktualisiert
+registration.success=Vielen Dank! Ihre Antwort wurde gesendet.
+registration.updated=Die Antwort wurde aktualisiert
 registrations=Anmeldungen
 invitations=Einladungen
 invitation=Einladung
