Refactor `SecurityConfiguration` to use `SecurityFilterChain` and update translations for consistency.
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -34,7 +34,6 @@ participates=nimmt teil
 persons=Jugeler
 register=Anmelden
 registered.at=Angemeldet am
-registration=Anmeldung
 registration.for=Anmeldung für
 registration.form=Anmeldeformular anzeigen
 registration.success=Vielen Dank! Ihre Antwort wurde gesendet.
@@ -55,6 +54,7 @@ select.no.persons=Keine Personen auswählen
 send.emails=E-Mails verschicken
 send.emails.confirm=Möchtest du die E-Mails versenden?
 send.emails.success=Die E-Mails werden nun versendet
+send=Absenden
 sent=Versendet
 show.registrations=Anmeldungen anzeigen
 show.mailings=Versand anzeigen
