--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -34,7 +34,6 @@ participates=participates
 persons=Persons
 register=Register
 registered.at=Registered at
-registration=Registration
 registration.for=Registration for
 registration.form=Show the registration form
 registration.success=Thank you for the response!
@@ -52,6 +51,7 @@ select.all.events=Select all events
 select.all.persons=Select all persons
 select.no.events=Select no events
 select.no.persons=Select no persons
+send=Send
 send.emails=Send emails
 send.emails.confirm=Do you want to send the emails?
 send.emails.success=Emails will be sent
