#93 Update translations and tests to handle registration cutoff logic
- Correct German translations with proper character encoding.
- Add a notification banner for registrations past the cutoff date.
- Update tests to verify behavior for open and closed registrations.
- Include new test data for a registration with extended validity.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -1,23 +1,23 @@
 active=Aktiv
 application.title=Anmeldetool
-back=Zurück
+back=ZurÃ¼ck
 cancel=Abbrechen
-create.mailing.confirm=Möchtest du den Versand für die Registrierung erstellen?
+create.mailing.confirm=MÃ¶chtest du den Versand fÃ¼r die Registrierung erstellen?
 create.mailing.error=Es gibt bereits einen Versand
 create.mailing.success=Der Versand wurde erstellt
 create.mailing=Versand erstellen
 date.of.birth=Geburtsdatum
-delete.record.error=Der Datensatz wird noch verwendet und kann nicht gelöscht werden
-delete.record.question=Willst du den Datensatz wirklich löschen?
-delete.record.success=Der Datensatz wurde gelöscht
-delete.record=Datensatz löschen
+delete.record.error=Der Datensatz wird noch verwendet und kann nicht gelÃ¶scht werden
+delete.record.question=Willst du den Datensatz wirklich lÃ¶schen?
+delete.record.success=Der Datensatz wurde gelÃ¶scht
+delete.record=Datensatz lÃ¶schen
 description=Beschreibung
-email.text.placeholder=E-Mail-Text eingeben. Für den Link zum Registrierungsformular muss %s enthalten sein.
+email.text.placeholder=E-Mail-Text eingeben. FÃ¼r den Link zum Registrierungsformular muss %s enthalten sein.
 email.text=E-Mail Text (%s nicht vergessen)
 email=E-Mail
 emails.sent=E-Mails verschickt
 event.registrations=Anmeldungen
-events=Anlässe
+events=AnlÃ¤sse
 export=Export
 first.name=Vorname
 from=von
@@ -34,7 +34,8 @@ participates=nimmt teil
 persons=Jugeler
 register=Anmelden
 registered.at=Angemeldet am
-registration.for=Anmeldung für
+registration.closed=Die Anmeldefrist ist abgelaufen. Sie kÃ¶nnen Ihre Auswahl ansehen, aber keine Ã„nderungen vornehmen.
+registration.for=Anmeldung fÃ¼r
 registration.form=Anmeldeformular anzeigen
 registration.success=Vielen Dank! Ihre Antwort wurde gesendet.
 registration.updated=Die Antwort wurde aktualisiert
@@ -47,12 +48,12 @@ reset=Reset
 save.error=Der Datensatz konnte nicht gespeichert werden
 save.success=Der Datensatz wurden gespeichert
 save=Speichern
-select.all.events=Alle Anlässe auswählen
-select.all.persons=Alle Personen auswählen
-select.no.events=Keine Anlässe auswählen
-select.no.persons=Keine Personen auswählen
+select.all.events=Alle AnlÃ¤sse auswÃ¤hlen
+select.all.persons=Alle Personen auswÃ¤hlen
+select.no.events=Keine AnlÃ¤sse auswÃ¤hlen
+select.no.persons=Keine Personen auswÃ¤hlen
 send.emails=E-Mails verschicken
-send.emails.confirm=Möchtest du die E-Mails versenden?
+send.emails.confirm=MÃ¶chtest du die E-Mails versenden?
 send.emails.success=Die E-Mails werden nun versendet
 send=Absenden
 sent=Versendet
