--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -34,6 +34,7 @@ participates=participates
 persons=Persons
 register=Register
 registered.at=Registered at
+registration.closed=The registration period has ended. You can view your selections but cannot make changes.
 registration.for=Registration for
 registration.form=Show the registration form
 registration.success=Thank you for the response!
