#92 Add support for confirmation emails with placeholders and update logic
- Introduce placeholders for personalized email content in translations.
- Add fields for confirmation email templates in `RegistrationView`.
- Implement confirmation email logic in `RegistrationService`.
- Update test data and tests to validate confirmation email functionality.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -2,6 +2,13 @@ active=Aktiv
 application.title=Anmeldetool
 back=Zurück
 cancel=Abbrechen
+confirmation.email.placeholders.help=Verfügbare Platzhalter: %PERSON_NAMES%, %EVENTS%, %LINK%, %OPEN_FROM%, %OPEN_UNTIL%, %REMARKS%
+confirmation.email.subject.new=Betreff (Erstanmeldung)
+confirmation.email.subject.update=Betreff (Aktualisierung)
+confirmation.email.text.new=E-Mail Text (Erstanmeldung)
+confirmation.email.text.placeholder=Platzhalter: %PERSON_NAMES%, %EVENTS%, %LINK%, %OPEN_FROM%, %OPEN_UNTIL%, %REMARKS%
+confirmation.email.text.update=E-Mail Text (Aktualisierung)
+confirmation.email=Bestätigungsmail
 create.mailing.confirm=Möchtest du den Versand für die Registrierung erstellen?
 create.mailing.error=Es gibt bereits einen Versand
 create.mailing.success=Der Versand wurde erstellt
@@ -41,6 +48,7 @@ registration.success=Vielen Dank! Ihre Antwort wurde gesendet.
 registration.updated=Die Antwort wurde aktualisiert
 registrations=Anmeldungen
 invitations=Einladungen
+invitation.email=Einladungsmail
 invitation=Einladung
 remarks.placeholder=Bemerkungen werden auf dem Anmeldeformular angezeigt
 remarks=Bemerkungen
