--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -2,6 +2,13 @@ active=active
 application.title=Registration Tool
 back=Back
 cancel=Cancel
+confirmation.email.placeholders.help=Available placeholders: %PERSON_NAMES%, %EVENTS%, %LINK%, %OPEN_FROM%, %OPEN_UNTIL%, %REMARKS%
+confirmation.email.subject.new=Subject (Initial Registration)
+confirmation.email.subject.update=Subject (Update)
+confirmation.email.text.new=Email Text (Initial Registration)
+confirmation.email.text.placeholder=Placeholders: %PERSON_NAMES%, %EVENTS%, %LINK%, %OPEN_FROM%, %OPEN_UNTIL%, %REMARKS%
+confirmation.email.text.update=Email Text (Update)
+confirmation.email=Confirmation Email
 create.mailing.confirm=Do you want to create the mailing?
 create.mailing.error=Mailing exists
 create.mailing.success=Mailing created
@@ -41,6 +48,7 @@ registration.success=Thank you for the response!
 registration.updated=Response updated
 registrations=Registrations
 invitations=Invitations
+invitation.email=Invitation Email
 invitation=Invitation
 remarks.placeholder=Remarks will appear on the registration form
 remarks=Remarks
