#95 Handle deactivation of persons in use instead of deletion
- Update translations for deactivation messages in German and English.
- Modify `PersonsView` to handle DataIntegrityViolationException by deactivating instead of deleting.
- Adjust `registration_test_data.sql` to use consistent test emails.
- Update `PersonsViewTest` to validate deactivation behavior and revised notifications.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -14,6 +14,7 @@ create.mailing.error=Es gibt bereits einen Versand
 create.mailing.success=Der Versand wurde erstellt
 create.mailing=Versand erstellen
 date.of.birth=Geburtsdatum
+deactivate.record.success=Die Person wurde deaktiviert, da sie noch verwendet wird
 delete.record.error=Der Datensatz wird noch verwendet und kann nicht gelöscht werden
 delete.record.question=Willst du den Datensatz wirklich löschen?
 delete.record.success=Der Datensatz wurde gelöscht
