--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -14,6 +14,7 @@ create.mailing.error=Mailing exists
 create.mailing.success=Mailing created
 create.mailing=Create mailing
 date.of.birth=Date of birth
+deactivate.record.success=The person has been deactivated because it is still in use
 delete.record.error=The record is still in use and cannot be deleted
 delete.record.question=Do you really want to delete the record?
 delete.record.success=The record has been deleted
