#96 Add toggle to show/hide inactive persons in PersonsView
- Update translations for "show inactive" and "hide inactive" in German and English.
- Implement toggle button in `PersonsView` for filtering inactive persons.
- Adjust `setItems` to handle inactive person visibility based on toggle state.
- Add and revise tests in `PersonsViewTest` for toggle functionality and filtering behavior.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -29,6 +29,7 @@ events=Anlässe
 export=Export
 first.name=Vorname
 from=von
+hide.inactive=Inaktive ausblenden
 last.name=Nachname
 link=Link
 location=Ort
@@ -66,6 +67,7 @@ send.emails.confirm=Möchtest du die E-Mails versenden?
 send.emails.success=Die E-Mails werden nun versendet
 send=Absenden
 sent=Versendet
+show.inactive=Inaktive anzeigen
 show.registrations=Anmeldungen anzeigen
 show.mailings=Versand anzeigen
 title=Bezeichnung
