--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -29,6 +29,7 @@ events=Events
 export=Export
 first.name=First name
 from=from
+hide.inactive=Hide inactive
 last.name=Last name
 link=Link
 location=Location
@@ -66,6 +67,7 @@ send.emails=Send emails
 send.emails.confirm=Do you want to send the emails?
 send.emails.success=Emails will be sent
 sent=Sent
+show.inactive=Show inactive
 show.registrations=Show registrations
 show.mailings=Show mailings
 title=Title
