#99 Add toggle to show/hide past events in EventsView
- Update translations for "show past events" and "hide past events" in German and English.
- Implement toggle button in `EventsView` for filtering past events.
- Adjust `setItems` to handle past event visibility based on toggle state.
- Add and revise tests in `EventsViewTest` for toggle functionality and filtering behavior.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -30,6 +30,7 @@ export=Export
 first.name=Vorname
 from=von
 hide.inactive=Inaktive ausblenden
+hide.past.events=Vergangene Anlässe ausblenden
 last.name=Nachname
 link=Link
 location=Ort
@@ -68,6 +69,7 @@ send.emails.success=Die E-Mails werden nun versendet
 send=Absenden
 sent=Versendet
 show.inactive=Inaktive anzeigen
+show.past.events=Vergangene Anlässe anzeigen
 show.registrations=Anmeldungen anzeigen
 show.mailings=Versand anzeigen
 title=Bezeichnung
