--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -30,6 +30,7 @@ export=Export
 first.name=First name
 from=from
 hide.inactive=Hide inactive
+hide.past.events=Hide past events
 last.name=Last name
 link=Link
 location=Location
@@ -68,6 +69,7 @@ send.emails.confirm=Do you want to send the emails?
 send.emails.success=Emails will be sent
 sent=Sent
 show.inactive=Show inactive
+show.past.events=Show past events
 show.registrations=Show registrations
 show.mailings=Show mailings
 title=Title
