#103 Add toggle to show/hide past invitations in RegistrationView
- Update translations for "show past invitations" and "hide past invitations" in German and English.
- Implement toggle button in `RegistrationView` for filtering past invitations.
- Adjust data provider to handle past invitation visibility based on toggle state.
- Add and revise tests in `RegistrationViewTest` for toggle functionality and filtering behavior.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -31,6 +31,7 @@ first.name=Vorname
 from=von
 hide.inactive=Inaktive ausblenden
 hide.past.events=Vergangene Anlässe ausblenden
+hide.past.invitations=Vergangene Einladungen ausblenden
 last.name=Nachname
 link=Link
 location=Ort
@@ -70,6 +71,7 @@ send=Absenden
 sent=Versendet
 show.inactive=Inaktive anzeigen
 show.past.events=Vergangene Anlässe anzeigen
+show.past.invitations=Vergangene Einladungen anzeigen
 show.registrations=Anmeldungen anzeigen
 show.mailings=Versand anzeigen
 title=Bezeichnung
