--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -31,6 +31,7 @@ first.name=First name
 from=from
 hide.inactive=Hide inactive
 hide.past.events=Hide past events
+hide.past.invitations=Hide past invitations
 last.name=Last name
 link=Link
 location=Location
@@ -70,6 +71,7 @@ send.emails.success=Emails will be sent
 sent=Sent
 show.inactive=Show inactive
 show.past.events=Show past events
+show.past.invitations=Show past invitations
 show.registrations=Show registrations
 show.mailings=Show mailings
 title=Title
