#100 Add "mandatory" field to events and adjust UI, translations, and tests
- Add new boolean column `mandatory` to the `event` table with a default value of `false`.
- Update German and English translations for "mandatory" and "no."
- Modify `EventsView` to include "mandatory" field in the grid and form.
- Adjust UI behavior for mandatory events in `PublicEventRegistrationView`:
  - Pre-check and disable mandatory event checkboxes.
  - Append "mandatory" badge to event titles.
- Update test data and add tests to handle mandatory events in `EventsViewTest` and `PublicEventRegistrationViewTest`.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -37,8 +37,10 @@ link=Link
 location=Ort
 mailing.created=Versand erstellt
 mailing=Versand
+mandatory=Obligatorisch
 no.mailings=Keinen Versand gefunden
 no.registrations=Keine Anmeldungen gefunden
+no=Nein
 open.from=Offen von
 open.until=Offen bis
 participates=nimmt teil
