--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -37,8 +37,10 @@ link=Link
 location=Location
 mailing.created=Mailing created
 mailing=Mailing
+mandatory=Mandatory
 no.mailings=No mailings found
 no.registrations=No registrations found
+no=No
 open.from=Open from
 open.until=Open to
 participates=participates
