#94 Add change detection to registration updates
- Implemented functionality to detect changes in event registrations before triggering email notifications.
- Updated `RegistrationService` to skip email sending when no changes are found.
- Enhanced German and English translations with messages for unchanged registrations.
- Adjusted `PublicEventRegistrationView` UI to reflect no-change scenarios.
- Revised tests in `PublicEventRegistrationViewTest` to validate the new behavior.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -53,6 +53,7 @@ registration.for=Registration for
 registration.form=Show the registration form
 registration.success=Thank you for the response!
 registration.updated=Response updated
+registration.no.changes=No changes detected. No email was sent.
 registrations=Registrations
 invitations=Invitations
 invitation.email=Invitation Email
