--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -53,6 +53,7 @@ registration.for=Anmeldung für
 registration.form=Anmeldeformular anzeigen
 registration.success=Vielen Dank! Ihre Antwort wurde gesendet.
 registration.updated=Die Antwort wurde aktualisiert
+registration.no.changes=Keine Änderungen festgestellt. Es wurde keine E-Mail verschickt.
 registrations=Anmeldungen
 invitations=Einladungen
 invitation.email=Einladungsmail
