Add deactivation support to PersonChange detection and UI
- Implement deactivation handling in `PersonChangeDetector` for active persons not present in Excel uploads.
- Update `PersonChange` model with DEACTIVATE change type.
- Enhance `PersonImportDialog` to display and manage DEACTIVATE changes with UI refinements (e.g., error badge for deactivation).
- Extend tests in `PersonChangeDetectorTest` to cover deactivation scenarios.
- Update i18n with deactivation labels for German and English translations.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -100,5 +100,6 @@ upload.persons.success={0} Person(en) erfolgreich importiert
 upload.persons.type=Typ
 upload.persons.type.new=Neu
 upload.persons.type.update=Aktualisierung
+upload.persons.type.deactivate=Deaktivieren
 year=Jahr
 yes=Ja
