--- a/src/main/resources/vaadin-i18n/translations_en.properties
+++ b/src/main/resources/vaadin-i18n/translations_en.properties
@@ -100,5 +100,6 @@ upload.persons.success=Successfully imported {0} person(s)
 upload.persons.type=Type
 upload.persons.type.new=New
 upload.persons.type.update=Update
+upload.persons.type.deactivate=Deactivate
 year=Year
 yes=Yes
