Update German and English translations for person type labels
- Add translations for `new`, `update`, and `deactivate` person types in i18n files.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -98,5 +98,8 @@ upload.persons.no.data=Keine Daten in der Excel-Datei gefunden
 upload.persons.reject.all=Alle ablehnen
 upload.persons.success={0} Person(en) erfolgreich importiert
 upload.persons.type=Typ
+upload.persons.type.new=Neu
+upload.persons.type.update=Aktualisierung
+upload.persons.type.deactivate=Deaktivieren
 year=Jahr
 yes=Ja
